RESOLVED FIXED258759
Path::transform() should not trigger creation of a platform path
https://bugs.webkit.org/show_bug.cgi?id=258759
Summary Path::transform() should not trigger creation of a platform path
Simon Fraser (smfr)
Reported 2023-06-30 17:18:56 PDT
We should implement Path::transform() for PathStream, so we don't trigger CGPath creation for common SVG scenarios.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-07-07 17:19:15 PDT
Cameron McCormack (:heycam)
Comment 2 2023-07-23 18:25:08 PDT
EWS
Comment 3 2023-08-07 19:13:00 PDT
Committed 266672@main (bc527208a62f): <https://commits.webkit.org/266672@main> Reviewed commits have been landed. Closing PR #16030 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.