Source/WebCore/platform/graphics/PathStream.cpp
@@ -199,6 +199,19 @@ void PathStream::applyElements(const PathElementApplier& applier) const
         segment.applyElements(applier);
 }
 
+bool PathStream::transform(const AffineTransform& transform)
+{
+    for (auto& segment : m_segmentsData->segments) {
+        if (!segment.canTransform())
+            return false;
+    }
+
+    for (auto& segment : m_segmentsData.access().segments)
+        segment.transform(transform);
+
+    return true;
+}
+
 std::optional<PathSegment> PathStream::singleSegment() const
 {
     if (m_segmentsData->segments.size() != 1)
